<resources>
    <string name="app_name">EnvMon</string>
    <string name="nd_open">Open Navigation Drawer</string>
    <string name="nd_close">Close Navigation Drawer</string>
    <string name="main_temperature">Temperature</string>
    <string name="main_humidity">Humidity</string>
    <string name="dark_mode">Dark Mode</string>
    <string-array name="graph_select_array">
        <item>Minute(s)</item>
        <item>Hour(s)</item>
        <item>Day(s)</item>
        <item>Week(s)</item>
        <item>Month(s)</item>
        <item>Year(s)</item>
    </string-array>
    <string name="are_you_the_administrstor">Are you the Administrstor?</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="register">Register</string>
    <string name="graphs">Graphs</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="add_new_user">Add New User</string>
    <string name="select_sensors">Select Sensors</string>
    <string name="graph_parameters">Graph Parameters</string>
    <string name="graph_settings">Graph Settings</string>
</resources>