<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:title="Graphs">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/tempmain"
                    android:title="@string/main_temperature"
                    tools:ignore="MenuTitle"/>
                <item
                    android:id="@+id/hummain"
                    android:title="@string/main_humidity"
                    tools:ignore="MenuTitle"
                    />
            </group>
        </menu>
    </item>

    <item android:title="Dark Mode">
        <menu>
            <item
                android:id="@+id/nav_item1"
                android:title="@string/dark_mode"
                app:actionLayout="@layout/layout_switch"
                app:showAsAction="always"
                tools:ignore="MenuTitle"/>
        </menu>
    </item>
    <item android:title="Profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_logout"
                    android:title="Logout" />
            </group>
        </menu>
    </item>
    <item
        android:title="Admin Panel"
        android:id="@+id/adminpanel">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/signup"
                    android:icon="@drawable/ic_baseline_person_add_24"
                    android:title="Add New User" />
            </group>
        </menu>
    </item>



</menu>